# avp2-map-parser

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  WorldTree.h  main.cpp
src/api/: Map.cpp  Map.h  Mesh.h  WorldFlags.h
src/core/: Processor.cpp  Processor.h
src/types/: Vector.h  WorldBsp.h  WorldTree.h
src/utils/: BinaryStream.cpp  BinaryStream.h  FileMarker.cpp  FileMarker.h  StringUtils.h
test/: CMakeLists.txt  main.cpp  worlds_test.cpp
test/lib/: catch.hpp
test/maps/: maps.lyt  simpleworld.ed
test/maps/Models/: 1x1_square.ABC
test/maps/Textures/: black32x32.dtx
test/maps/Worlds/: nosnap2_worlds.ed  regularbrush2_worlds.ed  simple_world.ed
